# ASL_fin_project

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  dvc.yaml  pyproject.toml  register_model.py
configs/: config.yaml
configs/infer/: default.yaml
configs/mlflow/: default.yaml
configs/model/: default.yaml
configs/train/: default.yaml
mlruns/0/: meta.yaml
scripts/: convert.sh
src/: commands.py  convert.py  convert.py   download_from_yadisk.py  infer.py  mlflow_wrapper.py  train.py
src/data/: datamodule.py  download.py
src/models/: classifier.py
